--- a/script/html/About-us.html
+++ b/script/html/About-us.html
@@ -6,8 +6,6 @@
 	<meta name="description" content="Description for the About page">
   </head>
   <body>
-	<div id="content">
-		<p>Our company is really popular and our products are great....bla bla bla</p>
-	</div>
+	<div id="content"><p>Our company is really popular and our products are great....bla bla bla</p></div>
   </body>
 </html>
