--- a/script/html/Home.html
+++ b/script/html/Home.html
@@ -6,15 +6,6 @@
 	<meta name="description" content="Description for the Home page">
   </head>
   <body>
-	<div id="header">
-		<h1>Welcome to our site!</h1>
-	</div>
-	<div id="content">
-		<p>This is really long text which explains our products and services...</p>
-		<button type="submit" class="btn btn-register">Register</button>
-		<button type="submit" class="btn btn-delete">Delete</button>
-		<button type="submit" class="btn btn-edit">Edit</button>
-	</div>
-	<div id="footer">ACME Ltd. 2014 - All rights reserved.</div>
+	<div id="footer"><p>ACME Ltd. 2014 - All rights reserved.</p></div>
   </body>
 </html>
